--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
 .restaurants-background {
   width: 100%;
   height: 40rem;
-  background-image: url("./LandingPage/img/resutaurant.jpg");
+  background-image: asset_path("./LandingPage/img/resutaurant.jpg");
   display: flex;
   justify-content: center;
   align-items: center;
